--- a/headphones/0-styles.css
+++ b/headphones/0-styles.css
@@ -1,167 +1,298 @@
-/* Reset CSS */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  /* Body Styling */
+/* Reset / Normalize */
+
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
+
+/* Variables */
+
+:root {
+  --color-primary: #FF6565;
+  --color-black:  #090909;
+  --color-white: #FFFFFF;
+  --color-grey: #a0a0a0;
+  --color-light-grey: #f3f3f3;
+  --color-dark-grey: #353535;
+
+  --text-color: var(--color-black);
+
+  --font-family: 'Sans Pro', 'Spin Cycle', sans-serif;
+
+  --font-size-small: 1.2rem;
+  --font-size-medium: 1.6rem;
+  --font-size-large: 1.8rem;
+  --font-size-x-large: 2.3rem;
+  --font-size-xx-large: 4.8rem;
+
+  --font-weight-regular: 400;
+  --font-weight-bold: 700;
+
+  --line-height-small: 1.2;
+  --line-height-base: 1.5;
+  --line-height-big: 1.8;
+}
+
+/* Base */
+
+*, *:before, *:after {
+ box-sizing: border-box;
+}
+
+html {
+ scroll-behavior: smooth;
+ font-size: 62.5%;
+}
+
 body {
-    font-family: 'Source Sans Pro', Arial, sans-serif;
-  }
-  
-  /* Hero Section */
-  .hero {
-    background: url('images/headphones_hero_1.jpg') no-repeat center center/cover;
-    height: 100vh;
-    color: #fff;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
+ margin: 0;
+ border: 1px solid var(--color-black);
+ color: var(--color-white);
+ background-color: var(--color-black);
+ font-family: var(--font-family);
+ font-size: var(--font-size-medium);
+ font-weight: var(--font-weight-regular);
+ text-align: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+ font-weight: var(--font-weight-bold);
+}
+
+a {
+ text-decoration: none;
+}
+
+.button {
+ color: var(--color-white);
+ background-color: var(--color-primary);
+ border-radius: 40px;
+ font-weight: var(--font-weight-bold);
+ text-transform: uppercase;
+ padding: 15px 30px;
+ font-size: var(--font-size-small);
+}
+
+.button:hover {
+ opacity: 0.9;
+}
+
+ul, nav {
+ list-style: none;
+}
+
+hr {
+ width: 150px;
+ height: 2px;
+ background-color: var(--color-primary);
+ border: 0;
+ margin-bottom: 80px;
+}
+
+/* Sections  */
+
+section {
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ padding: 125px 100px;
+}
+
+@media screen and (max-width: 1000px) {
+ section {
+   padding: 100px 50px;
+ }
+}
+
+@media screen and (max-width: 600px) {
+ section {
+    padding: 80px 30px;
+ }
+}
+
+.hero-title {
+ margin-bottom: 0;
+}
+
+.hero-subtitle {
+ font-size: var(--font-size-medium);
+ margin-bottom: 5rem;
+}
+
+section p {
+ max-width: 637px;
+ margin-bottom: 35px;
+ line-height: var(--line-height-big);
+}
+
+.columns {
+ width: 100%;
+ display: flex;
+ flex-wrap: row wrap;
+ justify-content: center;
+}
+
+#pentagon li {
+ background-image: url(./images/pentagone.png);
+}
+
+/* Header */
+
+header {
+ position: absolute;
+ top: 0;
+ left: 0;
+ z-index: 10;
+ width: 100%;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ padding: 30px 100px 0;
+ background: transparent;
+}
+
+.hero .hero-title {
+ margin-top: 300px;
+}
+
+header .menu-icon {
+ cursor: pointer;
+ padding: 2.5rem;
+ position: relative;
+ user-select: none;
+}
+
+header .menu-icon .navicon {
+ background: var(--color-white);
+ display: block;
+ width: 1.2rem;
+ height: .2rem;
+ position: relative;
+ transition: background .2s ease-out;
+}
+
+header .menu-icon .navicon:before, header .menu-icon .navicon:after {
+ content: '';
+ display: block;
+ width: 100%;
+ height: 100%;
+ position: absolute;
+ background: var(--color-white);
+ transition: all .2s ease-out;
+}
+
+header .menu-icon .navicon:before {
+ top: .7rem;
+ width: 2rem;
+}
+
+header .menu-icon .navicon:after {
+ top: -.7rem;
+ width: 2rem;
+}
+
+header .menu-btn {
+ display: none;
+}
+
+header .menu-icon {
+ display: none;
+}
+
+.menu-btn:checked ~ nav {
+ display: block;
+ max-height: 100%;
+ overflow: inherit;
+}
+
+header .menu-btn:checked + .menu-icon .navicon {
+ background: transparent;
+}
+
+header .menu-btn:checked + .menu-icon .navicon::before {
+ transform: rotate(-45deg);
+}
+
+header .menu-btn:checked + .menu-icon .navicon::after {
+ transform: rotate(45deg);
+}
+
+header .menu-btn:checked + .menu-icon .navicon::before, header .menu-btn:checked + .menu-icon .navicon::after {
+ top: 0;
+}
+
+header nav {
+ display: flex;
+}
+
+header nav li {
+ margin: 0 30px;
+ text-transform: lowercase;
+ font-weight: var(--font-weight-bold);
+}
+
+header nav li:first-child {
+ margin-left: 0;
+}
+
+header nav li:last-child {
+ margin-right: 0;
+}
+
+header nav li a {
+ color: var(--color-white);
+}
+
+header nav li a:hover {
+ color: var(--color-primary);
+}
+
+@media screen and (max-width: 480px) {
+ header {
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-  }
-  
-  /* Navbar */
-  .navbar {
-    width: 80%;
-    padding: 20px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
-  }  
+ }
+ 
+ header nav {
+    display: none;
+    flex-direction: column;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+    justify-content: center;
+ }
 
-  .navbar .logo img {
-    height: 40px;
-  }
-  
-  .navbar .nav-links {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-  }
-  
-  .navbar .nav-links li a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    transition: color 0.3s;
-  }
-  
-  .nav-links li a:hover,
-.nav-links li a:active {
-  opacity: 0.9;
+ header nav li {
+    margin: 0 0;
+    padding-bottom: 3rem;
+ }
+
+ header .menu-icon {
+    display: initial;
+    order: -1;
+ }
 }
-  
-  /* Hamburger Menu */
-  .hamburger {
-    display: none; /* Hidden on desktop */
-    cursor: pointer;
-    z-index: 1000;
-  }
 
-  .hamburger .fa-bars,
-.hamburger .fa-times {
-  font-size: 1.5rem;
-  color: white;
-  transition: transform 0.3s ease;
+/*  Hero */
+
+.hero {
+ position: relative;
+ justify-content: center;
+ min-height: 100vh;
+ text-align: center;
 }
-  
-  .hamburger .line {
-    background-color: white;
-    height: 3px;
-    width: 100%;
-    border-radius: 2px;
-    transition: transform 0.3s ease, opacity 0.3s ease;
-  }
-  
-  /* Hero Content */
-  .hero-content {
-    max-width: 800px;
-    margin-top: 250px;
-    
-  }
-  
-  .hero-content h1 {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-  }
-  
-  .hero-content p {
-    font-size: 1.2rem;
-    margin: 10px 0;
-  }
-  
-  .spacer {
-    margin: 50px ;
-  }
-  
-  .cta-button {
-    padding: 15px 30px;
-    font-size: 1.2rem;
-    color: white;
-    background-color: #FF6565;
-    border-radius: 20px;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    margin-bottom: 50px;
-  }
-  
-  .cta-button:hover {
-    opacity: 0.9;
-  }
-  
-  /* Responsive Design */
-@media (max-width: 480px) {
-    .nav-links {
-      display: none; /* Hidden by default */
-    }
-  
-    .hamburger {
-      display: block; /* Show hamburger on mobile */
-    }
-  
-    .nav-links.active {
-      display: flex; /* Show nav when active */
-    }
-  }
 
-  /* Responsive Design */
-  @media (max-width: 768px) {
-    .nav-links {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      top: 80px;
-      right: 40px;
-      background: rgba(0, 0, 0, 0.8);
-      padding: 20px;
-      border-radius: 5px;
-    }
-  
-    .nav-links.active {
-      display: flex;
-    }
-  
-    .hamburger {
-      display: flex;
-    }
-  
-    .hero-content h1 {
-      font-size: 2rem;
-    }
-  
-    .hero-content p {
-      font-size: 1rem;
-    }
-  
-    .cta-button {
-      font-size: 1rem;
-      padding: 10px 20px;
-    }
-  }
-  
+.hero .background-image {
+ position: absolute;
+ background-image: url(./images/headphones_hero_1.jpg);
+ background-position: center;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+ background-size: cover;
+ background-color: var(--color-black);
+ z-index: -1;
+}
 
-  
+.hero .button {
+ box-shadow: 5px 1px 15px 2px rgba(0, 0, 0, 0.57);
+ margin-bottom: 5rem;
+}
